# appconference

./: CLI.txt  Dialplan.txt  Flags.txt  Makefile  README  TODO  app_conference.c  app_conference.h  cli.c  cli.h  common.h  conf_frame.h  conference.c  conference.h  frame.c  frame.h  framelist.c  framelist.h  member.c  member.h  onering.c  onering.h  packer.c  packer.h  ringbuffer.h
CVSROOT/: loginfo
app_conference/: Makefile  README  ac.c  app_conference.c  app_conference.h  app_onering.c  cli.c  cli.h  common.h  conference.c  conference.h  frame.c  frame.h  member.c  member.h  onering.c  onering.h
app_conference/libspeex/: preprocess.c
iaxclient/: README
iaxclient/conf/: Makefile  app_conference.c  app_conference.h  onering.c  onering.h
iaxclient/contrib/tcl/: README.txt  XThreadUtil.c  configure  configure.in  iaxclient.c  (+2 more)
iaxclient/lib/: Makefile  README  TODO  arith.h  audio_alsa.c  audio_encode.c  audio_encode.h  audio_file.c  audio_file.h  audio_portaudio.c  audio_portaudio.h  audio_win32.c  audio_win32.h  codec_alaw.c  codec_alaw.h  codec_gsm.c  codec_ilbc.c  codec_speex.c  codec_speex.h  codec_ulaw.c  iaxclient.h  iaxclient_lib.c  iaxclient_lib.dsp  iaxclient_lib.h  iaxclient_lib.ncb  iaxclient_lib.opt  iaxclient_lib.plg  iaxclient_lib.vco  iaxclient_lib.vcp  inttypes.h  jitterbuf.c  jitterbuf.h  mec3.h  resample.c  resample.h  unixfuncs.c  winfuncs.c
iaxclient/lib/libiax2/src/: Makefile.am  align.c  align.h  frame.h  iax-client.h  iax.c  iax2-parser.c  iax2-parser.h  iax2.h  jitterbuf.h  winpoop.h
libspeex/: preprocess.c
sounds/: novideo.h263
(+134 files in other folders)
